users update implemented